<resources>
    <string name="app_name" translatable="false">Safe Downloader-Save Video</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admin_host_test" translatable="false">https://test.safedownloadersavevideo.com/xyn/mijw/</string>
    <string name="tba_host_test" translatable="false">https://test-real.safedownloadersavevideo.com</string>
    <string name="loading_progress" >Loading… %d%%</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_download">Download</string>
    <string name="nav_player">Player</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="guide1_title">Go to the video\'s source website to play it</string>
    <string name="guide2_title">Once the video begins playing, you can click the download button</string>
    <string name="guide3_title">This application facilitates downloads from third-party sources (excluding YouTube). Users are solely responsible for ensuring they possess the legal rights to any content downloaded and for all consequences arising from its use, including but not limited to copyright infringement.</string>
    <string name="guide3_des">Disclaimer</string>
    <string name="skip">Skip</string>
    <string name="guide3_bold">(excluding YouTube)</string>
    <string name="home_search">Search or type a URL</string>
    <string name="imdb">IMDb</string>
    <string name="mixkit">Mixkit</string>
    <string name="video">Video</string>
    <string name="search_hint">Paste or type a URL/search</string>
    <string name="search_guide_tips">Tips:Click the download button to start saving the file.</string>
    <string name="search_guide_tips_up">Begin playing the video.</string>
    <string name="search_guide_1">1.Locate the video by its title.</string>
    <string name="search_guide_2">2.Begin playing the video.</string>
    <string name="search_guide_3">3.Click the download button</string>
    <string name="search_guide_video_title">Her heart\'s melody sets her body free in a dance of pure, unscripted joy.</string>
    <string name="history">History</string>
    <string name="clear_all">Clear All</string>
    <string name="load_error">Couldn’t load the page. Please try again.</string>
    <string name="Retry">Retry</string>
    <string name="clear_all_history_title">Clear All</string>
    <string name="clear_all_history_message">Confirm to delete all history?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Delete</string>
    <string name="guide1_title_new">Play the video on its original website.</string>
    <string name="guide2_title_new">Once it starts playing, click the download button.</string>
    <string name="load_error_web">Load Error</string>
    <string name="no_file">No downloadable files available</string>
    <string name="a_video">Analyzing video…</string>
    <string name="Video_list">Video list</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>
    <string name="fast_download">Download(%d)</string>
    <string name="download_task1">Download has </string>
    <string name="download_task1_green">started</string>
    <string name="download_task2">Download </string>
    <string name="download_task2_green">completed</string>
    <string name="view">View</string>
    <string name="download_empty">No downloads in progress.</string>
    <string name="cancel_download">Cancel this download?</string>
    <string name="Sure">Sure</string>
    <string name="now">Not Now</string>
    <string name="connecting">Connecting</string>
    <string name="pending">Pending</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="empyt_player">No downloads yet.</string>
    <string name="Share">Share</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="file_valide">The video link appears to be invalid or broken.</string>
    <string name="short_download">Download</string>
    <string name="short_video_play">Video Play</string>
    <string name="short_uninstall">Uninstall</string>
    <string name="short_uninstall_title">You’re on the right track. Shall we try again?</string>
    <string name="short_feedback_title">We’d love to hear your feedback</string>
    <string name="short_uninstall_dl">Having trouble downloading the video?</string>
    <string name="short_uninstall_vp">Having trouble playing the video?</string>
    <string name="short_uninstall_dl_bt">Learn More</string>
    <string name="short_uninstall_vp_bt">Watch Now</string>
    <string name="keep_app">Keep App</string>
    <string name="still_uninstall">Still uninstall</string>
    <string name="fd_ed_hint">Grateful for your thoughts</string>
    <string name="not_user_friendly">Not user-friendly</string>
    <string name="ads_are_over">Ads are overwhelming</string>
    <string name="too_many_notifications">Too many notifications</string>
    <string name="unable_save_videos">Unable to save videos</string>
    <string name="hd_download_not_working">HD download not working</string>
    <string name="saved_videos_won_open">Saved videos won’t open</string>
    <string name="other_problem">Other problem</string>
    <string name="d_fd_title">We would appreciate \ another chance</string>
    <string name="enter_video_url">Enter Video URL</string>
    <string name="nt_1_title">🔥 Viral Picks</string>
    <string name="nt_1_content">Trending videos ready to download</string>
    <string name="nt_1_sub_content">Trending videos</string>
    <string name="nt_1_action">Trending videos</string>
    <string name="nt_2_title">⚡️Fresh Drops</string>
    <string name="nt_2_content">Fresh content, ready to stream</string>
    <string name="nt_2_sub_content">Fresh content</string>
    <string name="nt_2_action">Play Now</string>
    <string name="nt_3_title">🌟Daily Must-See</string>
    <string name="nt_3_content">The #1 video of the day is here</string>
    <string name="nt_3_sub_content">#1 video</string>
    <string name="nt_3_action">Watch Now</string>
    <string name="nt_4_title">👤Your Match</string>
    <string name="nt_4_content">Your perfect video match is in</string>
    <string name="nt_4_sub_content">perfect video</string>
    <string name="nt_4_action">Try It</string>
    <string name="nt_5_title">🌍Viral Alert</string>
    <string name="nt_5_content">Trending now. Don’t blink.</string>
    <string name="nt_5_sub_content">Don’t blink</string>
    <string name="nt_5_action">Explore</string>
    <string name="nt_r_1_title">Skip ad – back to trending</string>
    <string name="nt_r_1_action">Back to Videos</string>
    <string name="nt_r_2_title">One last step, you’ve got this!</string>
    <string name="nt_r_2_action">Continue Now</string>
    <string name="nt_r_3_title">Ready for something new? Tap to explore</string>
    <string name="nt_r_3_action">See What’s New</string>
    <string name="nt_use_intro" translatable="false">“Safe Downloader-Save Video” keeps you informed with a live progress notification during downloads, so you can easily track the process and return to the app. You\'re always in control—turn this feature on or off anytime via your device’s notification settings.</string>
</resources>