<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        android:background="#AF181E"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_uninstall_back" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"
            app:srcCompat="@mipmap/bg_uninstall" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"
            app:layout_constraintStart_toEndOf="@+id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textFontWeight="700"
            android:textStyle="bold"
            android:letterSpacing="0.0275"
            android:lineSpacingExtra="5sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/short_uninstall_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/d"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cl_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toStartOf="@+id/v"
        android:layout_marginEnd="6dp"
        android:background="@drawable/shape_f8f8f8_8"
        android:padding="16dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/short_uninstall_dl"
            android:letterSpacing="0.028"
            android:lineSpacingExtra="8sp"/>
        <LinearLayout
            android:id="@+id/l_d"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:background="@drawable/shape_red_botton_8"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/short_uninstall_dl_bt"
                android:textStyle="bold"
                android:letterSpacing="0.028"
                android:lineSpacingExtra="8sp"
                android:layout_marginEnd="2dp"
                android:maxLines="1"
                android:ellipsize="end"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="2dp"
                android:src="@mipmap/ic_uninstall_front"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/v"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cl_top"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/d"
        android:layout_marginStart="6dp"
        android:background="@drawable/shape_f8f8f8_8"
        android:padding="16dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/short_uninstall_vp"
            android:letterSpacing="0.028"
            android:lineSpacingExtra="8sp"/>
        <LinearLayout
            android:id="@+id/l_v"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:background="@drawable/shape_red_botton_8"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/short_uninstall_vp_bt"
                android:textStyle="bold"
                android:letterSpacing="0.028"
                android:lineSpacingExtra="8sp"
                android:layout_marginEnd="2dp"
                android:maxLines="1"
                android:ellipsize="end"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="2dp"
                android:src="@mipmap/ic_uninstall_front"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/still"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textColor="#7dffffff"
        android:textSize="14sp"
        android:text="@string/still_uninstall"
        android:letterSpacing="0.028"
        android:lineSpacingExtra="8sp"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/keep"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/keep_app"
        android:letterSpacing="0.028"
        android:lineSpacingExtra="8sp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_red_botton_8"
        app:layout_constraintBottom_toTopOf="@+id/still"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>