<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius_8_2b2727_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_download_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Video_list"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/back"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_all_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toBottomOf="@+id/title_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_min="500dp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/fast_download"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/shape_717171_8"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
            
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>